--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ buildscript {
 dependencies {
     implementation 'com.discord4j:discord4j-core:3.0.0.RC2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
-    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
