--- a/build.gradle
+++ b/build.gradle
@@ -32,19 +32,11 @@ docker {
     task pullDiscordChatBackup(type: DockerPullImage) {
         repository='tyrrrz/discordchatexporter'
     }
-
-    registryCredentials { //Not needed at that point, but might be required in the future
-        registryCredentials.url = 'https://index.docker.io/v1/'
-        username = dockerLogin
-        password = dockerPassword
-        email = dockerEmail
-    }
-
-
 }
 
 dependencies {
     compile group: 'net.dv8tion', name: 'JDA',                  version: '3.8.1_450'
+    compile group: 'com.jagrosh', name: 'JDA-Utilities',        version: '1.9'
     compile group: 'com.google.code.gson', name: 'gson',        version: '2.8.5'
     compile group: 'org.slf4j', name: 'slf4j-api',              version: '1.7.26'
     compile group: 'ch.qos.logback', name: 'logback-classic',   version: '1.2.3'
