--- a/build.gradle
+++ b/build.gradle
@@ -24,19 +24,22 @@ import com.bmuschko.gradle.docker.tasks.image.*
 
 docker {
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        //noinspection GroovyAssignabilityCheck
         docker.url = 'tcp://127.0.0.1:2375' //Enable "Expose daemon :2735 without TSL" in Docker for Windows
     } else {
+        //noinspection GroovyAssignabilityCheck
         docker.url = 'unix:///var/run/docker.sock'
     }
 
     task pullDiscordChatBackup(type: DockerPullImage) {
+        //noinspection GroovyAssignabilityCheck
         repository='tyrrrz/discordchatexporter'
     }
 }
 
 dependencies {
     compile group: 'net.dv8tion', name: 'JDA',                  version: '3.8.1_450'
-    compile group: 'com.jagrosh', name: 'JDA-Utilities',        version: '1.9'
+    compile group: 'com.jagrosh', name: 'jda-utilities',        version: '2.1.5'
     compile group: 'com.google.code.gson', name: 'gson',        version: '2.8.5'
     compile group: 'org.slf4j', name: 'slf4j-api',              version: '1.7.26'
     compile group: 'ch.qos.logback', name: 'logback-classic',   version: '1.2.3'
