--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 sourceCompatibility = 1.8
 
 import com.bmuschko.gradle.docker.tasks.image.DockerPullImage
-
+// Backup command to manually pull docker discord backup image. `docker run` command makes it automatically
 docker {
     task pullDiscordChatBackup(type: DockerPullImage) {
         //noinspection GroovyAssignabilityCheck
@@ -36,4 +36,6 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api',              version: '1.7.26'
     compile group: 'ch.qos.logback', name: 'logback-classic',   version: '1.2.3'
     compile group: 'com.sedmelluq', name: 'lavaplayer',         version: '1.3.11'
+    compile group: 'org.xerial', name: 'sqlite-jdbc',           version: '3.27.2.1'
+    compile group: 'org.fusesource.jansi', name: 'jansi', version: '1.17.1'
 }
