--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 group 'com.multiheaded'
-version '0.1'
+version '1.0'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
 buildscript {
@@ -29,7 +30,7 @@ docker {
 }
 
 dependencies {
-    compile group: 'net.dv8tion', name: 'JDA',                  version: '3.8.1_450'
+    compile group: 'net.dv8tion', name: 'JDA',                  version: '3.8.3_464'
     compile group: 'com.jagrosh', name: 'jda-utilities',        version: '2.1.5'
     compile group: 'com.jagrosh', name: 'JLyrics',              version: '0.2'
     compile group: 'com.google.code.gson', name: 'gson',        version: '2.8.5'
