--- a/build.gradle
+++ b/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.sedmelluq:lavaplayer:1.3.25'
     implementation 'org.fusesource.jansi:jansi:1.18'
+    implementation 'org.zeroturnaround:zt-zip:1.13'
 }
