--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.sedmelluq:lavaplayer:1.3.25'
     implementation 'org.fusesource.jansi:jansi:1.18'
     implementation 'org.zeroturnaround:zt-zip:1.13'
+    implementation 'com.opencsv:opencsv:5.0'
 }
