--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ java {
 group 'сom.l1sk1sh'
 version '1.1.1'
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 jar {
     manifest {
         attributes 'Main-Class': 'com.l1sk1sh.vladikbot.VladikBot'
