--- a/build.gradle
+++ b/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'org.fusesource.jansi:jansi:1.18'
     implementation 'org.zeroturnaround:zt-zip:1.13'
     implementation 'com.opencsv:opencsv:5.0'
+    implementation 'org.codehaus.janino:janino:3.1.0'
 }
