--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'org.zeroturnaround:zt-zip:1.13'
     implementation 'com.opencsv:opencsv:5.0'
     implementation 'org.codehaus.janino:janino:3.1.0'
+    implementation 'com.github.docker-java:docker-java:3.2.1'
 }
