Addition of reminding service

--- a/build.gradle
+++ b/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.opencsv:opencsv:5.1'
     implementation 'org.codehaus.janino:janino:3.1.2'
     implementation 'com.github.docker-java:docker-java:3.2.1'
+    implementation 'org.ocpsoft.prettytime:prettytime-nlp:4.0.5.Final'
 }
