--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ plugins {
 
 repositories {
     jcenter()
+    mavenCentral()
+    maven {
+        name 'm2-dv8tion'
+        url 'https://m2.dv8tion.net/releases'
+    }
 }
 
 group 'сom.l1sk1sh'
@@ -51,24 +56,24 @@ tasks.composeUp {
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:4.2.1'
+    implementation 'net.dv8tion:JDA:4.2.1_255'
     implementation 'com.jagrosh:jda-utilities:3.0.5'
     implementation 'com.jagrosh:JLyrics:0.4'
-    implementation 'com.sedmelluq:lavaplayer:1.3.67'
+    implementation 'com.sedmelluq:lavaplayer:1.3.75'
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'org.zeroturnaround:zt-zip:1.14'
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
-    implementation 'org.fusesource.jansi:jansi:1.18'
+    implementation 'org.fusesource.jansi:jansi:2.3.2'
 
-    implementation 'com.opencsv:opencsv:5.1'
+    implementation 'com.opencsv:opencsv:5.4'
     implementation 'org.jsoup:jsoup:1.13.1'
-    implementation 'com.apptastic:rssreader:2.3.1'
+    implementation 'com.apptastic:rssreader:2.5.0'
 
-    implementation 'org.ocpsoft.prettytime:prettytime-nlp:4.0.5.Final'
+    implementation 'org.ocpsoft.prettytime:prettytime-nlp:5.0.0.Final'
 
-    implementation 'org.codehaus.janino:janino:3.1.2'
-    implementation 'com.github.docker-java:docker-java:3.2.1'
+    implementation 'org.codehaus.janino:janino:3.1.3'
+    implementation 'com.github.docker-java:docker-java:3.2.8'
 }
