--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
 
     implementation 'org.ocpsoft.prettytime:prettytime-nlp:5.0.0.Final'
 
+    implementation 'org.projectlombok:lombok:1.18.20'
     implementation 'org.codehaus.janino:janino:3.1.3'
     implementation 'com.github.docker-java:docker-java:3.2.1'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
