--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -3,7 +3,7 @@ spring:
     web-application-type: none
   datasource:
     platform: h2
-    url: jdbc:h2:file:./app/database
+    url: jdbc:h2:~/app/database;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
     driver-class-name: org.h2.Driver
     username: vladik
     password: password
@@ -13,6 +13,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        enable_lazy_load_no_trans: true
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.H2Dialect
