--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -1,6 +1,7 @@
 spring:
   main:
     web-application-type: none
+    lazy-initialization: true
   datasource:
     platform: h2
     url: jdbc:h2:~/app/database;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
