--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 }
 
 group 'сom.l1sk1sh'
-version '2.0.0'
+version '2.0.0.alpha'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -50,8 +50,8 @@ tasks.composeUp {
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:4.3.0_312'
-    implementation 'pw.chew:jda-chewtils:1.22.0'
+    implementation 'net.dv8tion:JDA:4.4.0_352'
+    implementation 'pw.chew:jda-chewtils:1.24.1'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
 
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -59,24 +59,24 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.h2database:h2:1.4.200'
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.zeroturnaround:zt-zip:1.14'
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
-    implementation 'org.fusesource.jansi:jansi:2.3.2'
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
 
     implementation 'com.opencsv:opencsv:5.5.2'
-    implementation 'org.jsoup:jsoup:1.13.1'
+    implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'com.github.w3stling:rssreader:v2.5.0'
 
-    implementation 'org.ocpsoft.prettytime:prettytime-nlp:5.0.0.Final'
+    implementation 'org.ocpsoft.prettytime:prettytime-nlp:5.0.2.Final'
 
-    implementation 'org.projectlombok:lombok:1.18.20'
-    implementation 'org.codehaus.janino:janino:3.1.3'
-    implementation 'com.github.docker-java:docker-java:3.2.1'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'org.codehaus.janino:janino:3.1.6'
+    implementation 'com.github.docker-java:docker-java:3.2.12'
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 afterEvaluate {
