--- a/src/main/resources/application-default.yml
+++ b/src/main/resources/application-default.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:h2:./app/database;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
     driver-class-name: org.h2.Driver
     username: vladik
-    password: password
+    password: ${db.password}
   jpa:
     database: default
     show-sql: false
