--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url "https://m2.chew.pro/releases" }
+    maven { url "https://m2.chew.pro/snapshots" }
     maven { url 'https://m2.dv8tion.net/releases' }
 }
 
@@ -50,8 +51,8 @@ tasks.composeUp {
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:4.4.0_352'
-    implementation 'pw.chew:jda-chewtils:1.24.1'
+    implementation 'net.dv8tion:JDA:5.0.0-alpha.21'
+    implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
 
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -67,7 +68,7 @@ dependencies {
     implementation 'org.fusesource.jansi:jansi:2.4.0'
 
     implementation 'com.opencsv:opencsv:5.5.2'
-    implementation 'org.jsoup:jsoup:1.14.3'
+    implementation 'org.jsoup:jsoup:1.15.3'
     implementation 'com.github.w3stling:rssreader:v2.5.0'
 
     implementation 'org.ocpsoft.prettytime:prettytime-nlp:5.0.2.Final'
@@ -75,6 +76,7 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.22'
     implementation 'org.codehaus.janino:janino:3.1.6'
 
+    implementation 'org.jetbrains:annotations:23.0.0'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
