--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ tasks.composeUp {
 }
 
 dependencies {
-    implementation 'net.dv8tion:JDA:5.0.0-alpha.21'
+    implementation 'net.dv8tion:JDA:5.0.0-beta.2'
     implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
 
