--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -54,6 +55,7 @@ dependencies {
     implementation 'net.dv8tion:JDA:5.0.0-beta.2'
     implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
+    implementation 'com.github.aikaterna:lavaplayer-natives:original-SNAPSHOT'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
