Add lavalink docker (not used), change player to lavaplayer by arbjerg

--- a/.docker/bot/docker-compose.yml
+++ b/.docker/bot/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   bot:
-    build: ./bot/
+    build: ./
     image: bot:latest
     container_name: bot
     working_dir: /app
