--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ tasks.composeUp {
 dependencies {
     implementation 'net.dv8tion:JDA:5.0.0-beta.23'
     implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
-    implementation 'dev.arbjerg:lavaplayer:2.1.2'
+    implementation 'dev.arbjerg:lavaplayer:0eaeee195f0315b2617587aa3537fa202df07ddc-SNAPSHOT' // TODO Update to stable
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
