--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ tasks.composeUp {
 dependencies {
     implementation 'net.dv8tion:JDA:5.0.0-beta.24'
     implementation 'pw.chew:jda-chewtils:2.0-SNAPSHOT'
+    implementation 'com.github.ygimenez:Pagination-Utils:4.0.6'
     implementation 'dev.arbjerg:lavaplayer:2.2.0'
     implementation 'dev.lavalink.youtube:v2:1.3.0'
 
